--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,39 @@
 version: '2.0'
 services:
+  
+  sonarqube:
+    image: sonarqube:6.0
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+    volumes:
+      - "./volumes/sonarqube/conf:/opt/sonarqube/conf"
+      - "./volumes/sonarqube/data:/opt/sonarqube/data"
+      - "./volumes/sonarqube/extensions:/opt/sonarqube/extensions"
+      - "./volumes/sonarqube/bundled-plugins:/opt/sonarqube/lib/bundled-plugins"
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    container_name: db_sonarqube
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    # Da erro na VM do OSX
+    #volumes:
+    # - "./volumes/postgresql/data:/var/lib/postgresql/data"
+
   jenkins-portais:
-    build: ./build
+    build: ./build-jenkins
     container_name: portais
     ports:
       - "9080:8080"
     volumes:
-      - "./jenkins/portal:/var/jenkins_home"
-  jenkins-ddm:
-    build: ./build
-    container_name: ddm
-    ports:
-      - "9081:8080"
-    volumes:
-      - "./jenkins/ddm:/var/jenkins_home"
+      - "./volumes/jenkins/portal:/var/jenkins_home"
+    depends_on:
+      - sonarqube
+    links:
+      - sonarqube
