alteração no nginx

--- a/build-nginx/nginx.conf
+++ b/build-nginx/nginx.conf
@@ -1,5 +1,4 @@
-
-worker_processes  1;
+worker_processes  4;
 
 events {
 	 worker_connections  1024;
@@ -7,18 +6,18 @@ events {
 
 http {
 
-	gzip  on;
-
 	server {
 
-		listen 80;
+		listen 80;	
 
-		location /jenkins/portal {
-			proxy_pass http://jenkins-portais:9080;
+		location / {
+			if ($http_referer ~* sonar ) {
+				rewrite ^(.*)$ /sonarqube/$1 last;
+			}
 		}
 
-		location /sonarqube {
-			proxy_pass http://sonarqube:9000;
+		location /sonarqube/ {
+			proxy_pass http://sonarqube:9000/;
 		}
 
 	}
