mudança no sonarqube para redirect com nginx

--- a/build-nginx/nginx.conf
+++ b/build-nginx/nginx.conf
@@ -10,14 +10,8 @@ http {
 
 		listen 80;	
 
-		location / {
-			if ($http_referer ~* sonar ) {
-				rewrite ^(.*)$ /sonarqube/$1 last;
-			}
-		}
-
 		location /sonarqube/ {
-			proxy_pass http://sonarqube:9000/;
+			proxy_pass http://sonarqube:9000;
 		}
 
 	}
