configuração do nginx para redirecionamento de containers

--- a/build-nginx/nginx.conf
+++ b/build-nginx/nginx.conf
@@ -9,9 +9,18 @@ http {
 	server {
 
 		listen 80;	
+		server_name ci.buscapecompany.com;
 
 		location /sonarqube/ {
 			proxy_pass http://sonarqube:9000;
+		}
+
+		location /portais {
+			proxy_pass http://jenkins-portais:8080;
+		}
+
+		location /ddm {
+			proxy_pass http://jenkins-portais:8080;
 		}
 
 	}
