mudando nginx.conf

--- a/build-nginx/nginx.conf
+++ b/build-nginx/nginx.conf
@@ -15,14 +15,9 @@ http {
 			proxy_pass http://sonarqube:9000;
 		}
 
-		location /portais {
-			proxy_pass http://jenkins-portais:8080;
+		location /jenkins {
+			proxy_pass http://jenkins:8080;
 		}
-
-		location /ddm {
-			proxy_pass http://jenkins-portais:8080;
-		}
-
 	}
 
 }
